atualização no design

--- a/style.css
+++ b/style.css
@@ -126,28 +126,15 @@ main .home span {
 
 /* home */
 
-.linha-preta {
-    background: #FFA500;
-    width: 100vw;
-    height: 60px;
-    display: flex;
-    align-items: center;
-}
-
-.linha-laranja {
-    background: #000;
-    width: 100vw;
-    height: 20px;
-}
-
 /* sobre */
 
 .sobre {
+    display: block;
     color: #fff; 
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background: #222;
-    padding: 60px 10%;
+    padding: 5% 10%;
 }
 
 .sobre h2 {
@@ -155,7 +142,7 @@ main .home span {
     justify-content: center;
     font-size: 50px;
     font-weight: 600;
-    margin-bottom: 80px;
+    margin-bottom: 8%;
 }
 
 .sobre h2 span {
@@ -166,16 +153,16 @@ main .home span {
 .sobre .main-sobre {
     display: flex;
     align-items: center;
-    gap: 15%;
+    gap: 8%;
 }
 
 .sobre .texto-sobre {
-    max-width: 40%;
-    font-size: 1.1em;
+    max-width: 50%;
+    font-size: 150%;
 }
 
 .sobre img {
-    max-width: 450px;
+    max-width: 50%;
 }
 
 /* sobre */
